objects/CORE_BrandQuality__c.object
<CustomObject>
    <description>CORE object</description>
    <fields>
        <fullName>CORE_Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <referenceTo>CORE_Brand__c</referenceTo>
        <relationshipName>BrandQualities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CORE_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spirit</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
                <value>
                    <fullName>Champagne</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CORE_DAMAssetId__c</fullName>
        <label>DAMAssetId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CORE_Id__c</fullName>
        <externalId>true</externalId>
        <label>MDMId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CORE_PIM_ID__c</fullName>
        <externalId>true</externalId>
        <label>PIM ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Brand Quality</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Brand Quality Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand Qualities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>